Module_05/materials/linux_process/stderr.txt
  File "/Users/artem/Documents/PROGRAMMING/SkillBox/006_Python_Advanced/Module_05/materials/linux_process/simple_app.py", line 71
    test -d test || mkdir test && kill $(cat flask_pid.txt) && python simple_app.py > stdout.txt 2> stderr.txt & echo $! > flask_pid.txt
            ^^^^
SyntaxError: invalid syntax
